2003-09-15  Martin Kretzschmar  <m_kretzschmar@gmx.net>

	* bonobo/bonobo-ui-sync-menu.c (impl_bonobo_ui_sync_menu_build)
	(impl_bonobo_ui_sync_menu_build_placeholder): use
	gtk_separator_menu_item_new to create separators, fixes #122314
	( screen reader menu item count) (Michael gave the hint).

2003-09-09  Taneem Ahmed  <taneem@bengalinux.org>

	* configure.in: Added "bn" to ALL_LINGUAS.

2003-08-31  Christian Rose  <menthos@menthos.com>

	* configure.in: Added "ne" to ALL_LINGUAS.

2003-08-31  Laurent Dhima  <laurenti@alblinux.net>

	* configure.in: Added "sq" to ALL_LINGUAS.
	
2003-08-27  Michael Meeks  <michael@ximian.com>

	* Version 2.4.0

2003-08-22  Samúel Jón Gunnarsson  <sammi@techattack.nu>

	* configure.in: Added "is" to ALL_LINGUAS.
	
2003-08-21  Martin Kretzschmar  <m_kretzschmar@gmx.net>

       * samples/container/bonobo-sample-container.c: define
         POPT_TABLEEND when compiling with older popt

2003-08-11  Michael Meeks  <michael@ximian.com>

	* Version 2.3.6

2003-08-06  Yuedong Du  <yuedong.du@sun.com>

	* bonobo/bonobo-ui-util.c: (bonobo_ui_util_build_help_menu): add
	shortcut F1 to help menu entry, fix bug 47376

2003-08-04  Federico Mena Quintero  <federico@ximian.com>

	Fixes #118705.

	* bonobo/bonobo-socket.c (BonoboSocketPrivate): Removed the
	toplevel field, as GtkSocket already has such a field.
	(bonobo_socket_hierarchy_changed): Oops, chain to the parent
	handler.
	(bonobo_socket_finalize): Don't tweak priv->toplevel.
	(bonobo_socket_instance_init): Likewise.
	(bonobo_socket_dispose): Use the GtkSocket's toplevel.

	* bonobo/bonobo-ui-toolbar-button-item.c
	(bonobo_ui_toolbar_button_item_construct): Unset GTK_CAN_FOCUS.

2003-07-28  Padraig O'Briain  <padraig.obriain@sun.com>

	* bonobo/bonobo-dock-item-grip.c:
	Check what widget still exists before referring to it.
	This fixes bug #118041.

2003-07-23  Federico Mena Quintero  <federico@ximian.com>

	* bonobo/bonobo-socket.c (bonobo_socket_instance_init): Create a